# zoom-video-downloader

./: .gitignore  README.md  batch_downloader.py  config.yaml  core.py  main.py  pyproject.toml  simple_zoom_downloader.py  start.sh
input/: ejemplo_urls.csv  ejemplo_urls.txt
tests/: test_core.py
