[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zoom-video-downloader"
version = "2.0.0"
description = "Herramienta para descargar grabaciones de Zoom en video (MP4), audio (MP3) y transcripciones (SRT/VTT)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Zoom Video Downloader"}
]
keywords = ["zoom", "video", "downloader", "recording", "mp4", "mp3", "transcription"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Utilities"
]

dependencies = [
    "yt-dlp>=2026.2.4",
    "PyYAML>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
]

[project.scripts]
zoom-downloader = "simple_zoom_downloader:main"
zoom-batch = "batch_downloader:main"

[project.urls]
Homepage = "https://github.com/686f6c61/zoom-video-downloader"
Repository = "https://github.com/686f6c61/zoom-video-downloader"
Issues = "https://github.com/686f6c61/zoom-video-downloader/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["zoom_video_downloader*"]
exclude = ["tests*", "downloads*", "input*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "downloads/*", "input/*"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "def __repr__", "raise AssertionError", "raise NotImplementedError"]
